[gd_scene load_steps=5 format=3 uid="uid://xcb0thfob2hd"]

[ext_resource type="Script" path="res://GDScript/menu_class.gd" id="1_c36c5"]
[ext_resource type="Texture2D" uid="uid://c8q4grsx54jku" path="res://Art/Menu/OptBG.jpg" id="2_48q5y"]
[ext_resource type="FontFile" uid="uid://bb1stx3kjdwu1" path="res://Art/ExitLevel/superstar_memesbruh03.ttf" id="3_8chom"]
[ext_resource type="PackedScene" uid="uid://euci23dg2488" path="res://Scences/master_volume.tscn" id="4_cqd7w"]

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c36c5")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = 8.0
offset_right = 1154.0
offset_bottom = 658.0
texture = ExtResource("2_48q5y")
expand_mode = 1

[node name="Fullscreen" type="Label" parent="TextureRect"]
layout_mode = 0
offset_left = 396.0
offset_top = 382.0
offset_right = 514.0
offset_bottom = 405.0
theme_override_fonts/font = ExtResource("3_8chom")
text = "Fullscreen"

[node name="resetMsg" type="Label" parent="TextureRect"]
visible = false
layout_mode = 0
offset_left = 582.0
offset_top = 460.0
offset_right = 756.0
offset_bottom = 483.0
theme_override_fonts/font = ExtResource("3_8chom")
text = "Progress has been reset"

[node name="nameMsg" type="Label" parent="TextureRect"]
visible = false
layout_mode = 0
offset_left = 424.0
offset_top = 300.0
offset_right = 598.0
offset_bottom = 323.0
theme_override_fonts/font = ExtResource("3_8chom")
text = "Name has been changed"

[node name="FullscreenSlide" type="CheckButton" parent="TextureRect"]
layout_mode = 0
offset_left = 481.0
offset_top = 376.0
offset_right = 525.0
offset_bottom = 400.0

[node name="Name" type="TextEdit" parent="TextureRect"]
layout_mode = 0
offset_left = 387.0
offset_top = 326.0
offset_right = 636.0
offset_bottom = 363.0

[node name="Volume" type="Label" parent="TextureRect"]
layout_mode = 0
offset_left = 520.0
offset_top = 413.0
offset_right = 638.0
offset_bottom = 436.0
theme_override_fonts/font = ExtResource("3_8chom")
text = "Master Volume"

[node name="Title" type="Label" parent="TextureRect"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -67.5
offset_top = 199.0
offset_right = 68.5
offset_bottom = -411.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_8chom")
theme_override_font_sizes/font_size = 40
text = "Options"

[node name="MasterVolume" parent="TextureRect" instance=ExtResource("4_cqd7w")]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -180.5
offset_top = -223.0
offset_right = 191.5
offset_bottom = -195.0
grow_horizontal = 2
grow_vertical = 0
busName = "Master"

[node name="Confirm" type="Button" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 69.5
offset_top = 3.0
offset_right = 149.5
offset_bottom = 34.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_8chom")
text = "Change"

[node name="Return" type="Button" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -163.5
offset_top = 163.0
offset_right = -83.5
offset_bottom = 194.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_8chom")
text = "Main Menu
"

[node name="Reset" type="Button" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 27.5
offset_top = 160.0
offset_right = 143.5
offset_bottom = 191.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_8chom")
text = "Reset Progress
"

[connection signal="toggled" from="TextureRect/FullscreenSlide" to="." method="_on_fullscreen_slide_toggled"]
[connection signal="pressed" from="TextureRect/Confirm" to="." method="_on_confirm_pressed"]
[connection signal="pressed" from="TextureRect/Return" to="." method="_on_return_pressed"]
[connection signal="pressed" from="TextureRect/Reset" to="." method="_on_reset_pressed"]
